webpack dev server

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <head>
         <meta charset="UTF-8">
         <title>PAYS</title>
+        <script src="/build/bundle.js" defer></script>
         <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
     </head>
     <body>
