--- a/public/jukebox.html
+++ b/public/jukebox.html
@@ -1,61 +1,123 @@
 <html>
-<head>
-    <script>
-        function init() {
-            var connection = new WebSocket('ws://localhost:8888/ws'); 
-            var audio = new Audio('http://localhost:8000/music/audio.ogg');
-            var playingSlide = document.querySelector('#playing');
-            var idleSlide = document.querySelector('#idle');
-            var duration = document.querySelector('#duration');
-            state = null;
+    <head>
+        <script>
+            function init() {
+                var connection = new WebSocket('ws://localhost:8888/ws');
+                var audio = new Audio('http://localhost:8000/assets/audio.mp3');
+                var playingSlide = document.querySelector('#playing');
+                var idleSlide = document.querySelector('#idle');
+                var duration = document.querySelector('.time');
+                var state = null;
 
-            connection.onopen = function () {
-                console.log('Connection was opened');
-            };
+                connection.onopen = function () {
+                    console.log('Connection was opened');
+                };
 
-            connection.onerror = function (error) {
-                console.log('WebSocket Error ' + error);
-            };
+                connection.onerror = function (error) {
+                    console.log('WebSocket Error ' + error);
+                };
 
-            connection.onmessage = function (e) {
-                console.log(e.data);
-                updateState(JSON.parse(e.data));   
-            };
+                connection.onmessage = function (e) {
+                    console.log(e.data);
+                    updateState(JSON.parse(e.data));
+                };
 
-            function updateState(newState) {
-                state = newState; 
-                evaluateState();
-            };
+                function updateState(newState) {
+                    state = newState;
+                    evaluateState();
+                };
 
-            updateState = updateState;
+                window.updateState = updateState;
 
-            function evaluateState() {
-                if(state && state.playing) { 
-                    playingSlide.style.display = 'block';
-                    idleSlide.style.display = 'none';
-                    duration.innerHTML = 'Duration: ' + state.duration
-                    audio.play();
-                } else {
-                    playingSlide.style.display = 'none';
-                    idleSlide.style.display = 'block';
-                    audio.pause();
+                function evaluateState() {
+                    if(state && state.playing) {
+                        playingSlide.style.display = 'block';
+                        idleSlide.style.display = 'none';
+                        duration.innerHTML = 'Duration: ' + sec2humanReadable(state.duration);
+                        audio.play();
+                    } else {
+                        playingSlide.style.display = 'none';
+                        idleSlide.style.display = 'block';
+                        audio.pause();
+                    }
                 }
+
+                function sec2humanReadable(duration){
+                    var hour = 0;
+                    var min = 0;
+                    var sec = 0;
+
+                    if (duration){
+                        if (duration >= 60){
+                            min = Math.floor(duration / 60);
+                            sec = duration % 60;
+                        }
+                        else{
+                            sec = duration;
+                        }
+
+                        if (min >= 60){
+                            hour = Math.floor(min / 60);
+                            min = min - hour * 60;
+                        }
+
+                        if ( hour < 10 ){ hour = '0'+hour; }
+                        if ( min < 10 ){ min = '0'+min; }
+                        if ( sec < 10 ){ sec = '0'+sec; }
+                    }
+                    return hour +":"+ min +":"+ sec;
+                }
+
+                evaluateState();
             }
 
-            evaluateState();
-        }
-
-        window.onload = init;
-    </script>
-</head>
-<body>
-    <div id='playing'>
-        <img src='./assets/musical-notes.png' />
-        <p id='duration'></p>
-    </div>
-    <div id='idle'>
-        <h1>DECENTRALIZED JUKEBOX</h1>
-        <h2>In order to play music, send X to Y</h2>
-    </div>
-</body>
+            window.onload = init;
+        </script>
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="assets/style.css">
+    </head>
+    <body>
+        <nav>
+            <img src="assets/logo.png" />
+        </nav>
+        <div id="box">
+            <div id='playing'>
+                <div class="cover">
+                    <img src="assets/cover.png" />
+                </div>
+                <div class="information">
+                    <div class="track">
+                        <p>
+                            <span class="title">Verb</span>
+                            <span>by</span>
+                            <span class="artist">Glass Boy</span>
+                        </p>
+                        <span class="secondary">
+                            <p>
+                                GENRES
+                            </p>
+                            <p>
+                                Avant-Garde, Electronic, Lo-Fi, Glitch
+                            </p>
+                        <span>
+                    </div>
+                    <hr>
+                    <div class="time">
+                    </div>
+                    <hr>
+                    <div class="notice">
+                        Moar? play@djukebox.com
+                    </div>
+                </div>
+            </div>
+            <div id='idle'>
+                <p>To play a song, transfer money to: play@djukebox.com<p/>
+            </div>
+        </div>
+        <footer>
+            <span>Powered by:</span>
+            <a href="https://www.bigchaindb.com" target="_blank"><img src="assets/bigchaindb.png" /></a>
+            <a href="https://www.interledger.org" target="_blank"><img src="assets/interledger.png" /></a>
+        </footer>
+    </body>
 </html>
